# tgether-sdk-python

./: .gitignore  README.md  pyproject.toml
tests/: test_core.py
tgether_sdk/: __init__.py  core.py
