[project]
name = "tgether-sdk"
version = "0.1.0"
description = "A lightweight Python SDK for signing and verifying Tgether order authorizations (EIP-712)."
authors = [
    { name = "Joe Leva", email = "joe@tgether.io" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "eth-account==0.13.7",
    "eth-utils==5.3.0",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/tgetherio/tgether-sdk-python"
"Documentation" = "https://github.com/tgetherio/tgether-sdk-python"
"Source" = "https://github.com/tgetherio/tgether-sdk-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
